# zfw_game_template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run.sh
scripts/: clean.ps1  run.ps1
src/: entry.c  game.c  game.h
